feat: 验收冲刺收尾 — 自制 DS、评论/评分、路线提示、导航重构与答辩文档