@@ -1,9 +1,11 @@
 package com.travel.algorithm;
 
-import java.util.ArrayList;
+import com.travel.ds.ArrayList;
+import com.travel.ds.Collections;
+import com.travel.ds.List;
+import com.travel.ds.PriorityQueue;
+
 import java.util.Comparator;
-import java.util.List;
-import java.util.PriorityQueue;
 
 /**
  * Top-K 选择器。
@@ -23,30 +25,35 @@ public class TopKSelector<T>
      * @param comparator 比较器（分数越大越靠前）
      * @return Top-K（按 comparator 从高到低排序后的结果）
      */
-    public List<T> selectTopK(List<T> items, int k, Comparator<T> comparator)
+    public List<T> selectTopK(Iterable<T> items, int k, Comparator<T> comparator)
     {
-        if (items == null || items.isEmpty() || k <= 0)
+        if (items == null || k <= 0)
         {
-            return List.of();
+            return Collections.emptyList();
         }
-        int kk = Math.min(k, items.size());
 
-        // 小顶堆：堆顶是当前 TopK 中“最差”的那个
-        PriorityQueue<T> pq = new PriorityQueue<>(kk, comparator);
+        int total = 0;
+        for (T ignored : items)
+        {
+            total++;
+        }
+        if (total == 0)
+        {
+            return Collections.emptyList();
+        }
+        int kk = Math.min(k, total);
+
+        PriorityQueue<T> pq = new PriorityQueue<>(comparator);
         for (T item : items)
         {
             if (pq.size() < kk)
             {
                 pq.offer(item);
             }
-            else
+            else if (comparator.compare(item, pq.peek()) > 0)
             {
-                // comparator: bigger is better. if item better than worst (peek), replace.
-                if (comparator.compare(item, pq.peek()) > 0)
-                {
-                    pq.poll();
-                    pq.offer(item);
-                }
+                pq.poll();
+                pq.offer(item);
             }
         }
 
@@ -56,9 +63,7 @@ public class TopKSelector<T>
             result.add(pq.poll());
         }
 
-        // pq 弹出是从“最差”到“最好”，这里反转得到从“最好”到“最差”
-        result.sort(comparator.reversed());
+        Collections.sort(result, comparator.reversed());
         return result;
     }
 }
-
